--- a/style.css
+++ b/style.css
@@ -1,1 +1,21 @@
 /* Start coding here */
+#back{
+    width: 100%;
+    height: 100%;
+    padding: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-image: linear-gradient(to top right,hsl(0, 100%, 70%),hsl(240, 100%, 70%));
+}
+
+.box{
+    width: 30%;
+    height: 30%;
+    padding: 20px;
+    background-color: hsla(0, 50%, 100%, 0.5);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
